<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright © 2020 Cask Data, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
  ~ use this file except in compliance with the License. You may obtain a copy of
  ~ the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations under
  ~ the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.cdap.plugin</groupId>
    <artifactId>amazon-sqs-plugins</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>Amazon SQS Plugins</name>
    <packaging>jar</packaging>
    <description>Plugins for Amazon SQS</description>
    <url>https://github.com/data-integrations/amazon-sqs</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>CDAP</name>
            <email>cdap-dev@googlegroups.com</email>
            <organization>CDAP</organization>
            <organizationUrl>http://cdap.io</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/data-integrations/google-cloud.git</connection>
        <developerConnection>scm:git:git@github.com:data-integrations/google-cloud.git</developerConnection>
        <url>https://github.com/data-integrations/google-cloud.git</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <url>https://issues.cask.co/browse/CDAP</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>sonatype.release</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>sonatype.snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <jee.version>7</jee.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <avro.version>1.8.2</avro.version>
        <bigquery.connector.hadoop2.version>hadoop2-1.0.0</bigquery.connector.hadoop2.version>
        <commons.codec.version>1.4</commons.codec.version>
        <cdap.version>6.1.1</cdap.version>
        <cdap.plugin.version>2.3.4</cdap.plugin.version>
        <dropwizard.metrics-core.version>3.2.6</dropwizard.metrics-core.version>
        <flogger.system.backend.version>0.3.1</flogger.system.backend.version>
        <gcs.connector.version>hadoop2-2.0.0</gcs.connector.version>
        <guava.version>27.0.1-jre</guava.version>
        <hadoop.version>2.9.2</hadoop.version>
        <hbase-mapreduce-version>2.2.0</hbase-mapreduce-version>
        <hbase-shaded-client.version>1.4.10</hbase-shaded-client.version>
        <hbase-shaded-server.version>1.4.10</hbase-shaded-server.version>
        <httpclient.version>4.5.6</httpclient.version>
        <jackson.core.version>2.8.11.1</jackson.core.version>
        <junit.version>4.12</junit.version>
        <slf4j.version>1.7.5</slf4j.version>
        <spark.version>2.3.1</spark.version>
    </properties>

    <repositories>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>


    <dependencies>
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro</artifactId>
            <version>${avro.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-formats</artifactId>
            <version>${cdap.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.avro</groupId>
                    <artifactId>avro</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-api</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-etl-api</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-etl-proto</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-etl-batch</artifactId>
            <version>${cdap.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.plugin</groupId>
            <artifactId>format-common</artifactId>
            <version>${cdap.plugin.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cdap.plugin</groupId>
            <artifactId>format-avro</artifactId>
            <version>${cdap.plugin.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cdap.plugin</groupId>
            <artifactId>hydrator-common</artifactId>
            <version>${cdap.plugin.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-core</artifactId>
            <version>${dropwizard.metrics-core.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro-mapred</artifactId>
            <classifier>hadoop2</classifier>
            <version>${avro.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.core.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>hydrator-test</artifactId>
            <version>${cdap.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cdap.cdap</groupId>
            <artifactId>cdap-unit-test</artifactId>
            <version>${cdap.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.hive</groupId>
                    <artifactId>hive-exec</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.cdap.cdap</groupId>
                    <artifactId>cdap-explore-jdbc</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-streaming_2.11</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.xerial.snappy</groupId>
            <artifactId>snappy-java</artifactId>
            <version>1.1.7.2</version>
        </dependency>
        <!-- Start: dependency for Google PubSub Streaming Source -->
        <dependency>
            <groupId>org.apache.bahir</groupId>
            <artifactId>spark-streaming-pubsub_2.11</artifactId>
            <version>2.3.3</version>
        </dependency>
        <!-- End: dependency for Google PubSub Streaming Source -->

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.24.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Dependencies are required after updating bigquery.connector version from 0.13.1-hadoop2 to hadoop2-0.13.17 -->
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons.codec.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpclient.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-sqs</artifactId>
            <version>1.11.729</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.rat</groupId>
                <artifactId>apache-rat-plugin</artifactId>
                <version>0.10</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.doxia</groupId>
                        <artifactId>doxia-core</artifactId>
                        <version>1.6</version>
                        <exclusions>
                            <exclusion>
                                <groupId>xerces</groupId>
                                <artifactId>xercesImpl</artifactId>
                            </exclusion>
                        </exclusions>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>rat-check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>LICENSE*.txt</exclude>
                                <!-- This file should be not be there, but I am excluding it for now -->
                                <exclude>*.rst</exclude>
                                <exclude>*.md</exclude>
                                <exclude>**/*.cdap</exclude>
                                <exclude>**/*.yaml</exclude>
                                <exclude>**/*.md</exclude>
                                <exclude>logs/**</exclude>
                                <exclude>.git/**</exclude>
                                <exclude>.idea/**</exclude>
                                <exclude>**/grok/patterns/**</exclude>
                                <exclude>conf/**</exclude>
                                <exclude>data/**</exclude>
                                <exclude>plugins/**</exclude>
                                <exlcude>**/*.patch</exlcude>
                                <exclude>**/logrotate.d/**</exclude>
                                <exclude>**/limits.d/**</exclude>
                                <exclude>**/*.json</exclude>
                                <exclude>**/*.json.template</exclude>
                                <exclude>**/MANIFEST.MF</exclude>
                                <!-- exclude any hack classes -->
                                <exclude>**/org/apache/hadoop/**</exclude>
                                <!-- exclude resource files-->
                                <exclude>**/resources/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>process-test-classes</phase>
                        <configuration>
                            <configLocation>checkstyle.xml</configLocation>
                            <suppressionsLocation>suppressions.xml</suppressionsLocation>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>8.29</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
                    <argLine>-Xmx5000m -Djava.awt.headless=true -XX:MaxPermSize=1024m -XX:+UseConcMarkSweepGC -XX:OnOutOfMemoryError="kill -9 %p" -Djava.net.preferIPv4Stack=true</argLine>
                    <reuseForks>false</reuseForks>
                    <reportFormat>plain</reportFormat>
                    <systemPropertyVariables>
                        <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
                    </systemPropertyVariables>
                    <includes>
                        <include>**/*TestsSuite.java</include>
                        <include>**/*TestSuite.java</include>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/*TestRun.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>3.5.1</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
                        <Embed-Transitive>true</Embed-Transitive>
                        <Embed-Directory>lib</Embed-Directory>
                        <!--Only @Plugin classes in the export packages will be included as plugin-->
                        <_exportcontents>
                            io.cdap.plugin.*;
                        </_exportcontents>
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>bundle</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>io.cdap</groupId>
                <artifactId>cdap-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <cdapArtifacts>
                        <parent>system:cdap-data-pipeline[6.1.1,7.0.0-SNAPSHOT)</parent>
                        <parent>system:cdap-data-streams[6.1.1,7.0.0-SNAPSHOT)</parent>
                    </cdapArtifacts>
                </configuration>
                <executions>
                    <execution>
                        <id>create-artifact-config</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>create-plugin-json</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>
